MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/HO_Type_of_Authorized_Party__c.field-meta.xml
<CustomField>
    <fullName>HO_Type_of_Authorized_Party__c</fullName>
    <label>HO Type of Authorized Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>