MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Home_Orientation_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Home_Orientation_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Orientation Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Handover Details (Home Orientation Appointment)</relationshipLabel>
    <relationshipName>Handover_Details</relationshipName>
    <type>Lookup</type>
</CustomField>