MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Home_Orientation_Appointment_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Home_Orientation_Appointment_End_Time__c</fullName>
    <formula>Home_Orientation_Appointment__r.SchedEndTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Orientation Appointment End Time</label>
    <type>DateTime</type>
</CustomField>