MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Home_Orientation_Appointment_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Home_Orientation_Appointment_Start_Time__c</fullName>
    <formula>Home_Orientation_Appointment__r.SchedStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Orientation Appointment Start Time</label>
    <type>DateTime</type>
</CustomField>