MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Home_Orientation_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Home_Orientation_Appointment_Status__c</fullName>
    <formula>TEXT(Home_Orientation_Appointment__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Orientation Appointment Status</label>
    <type>Text</type>
</CustomField>