MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Home_Orientation_invitation_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Home_Orientation_invitation_letter_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Orientation invitation letter sent</label>
    <type>Checkbox</type>
</CustomField>