MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Home_Orientation_Letter_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Home_Orientation_Letter_Date_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Orientation Letter Date Sent</label>
    <type>Date</type>
</CustomField>