MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Is_Bcc_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Bcc_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bcc Letter Sent</label>
    <type>Checkbox</type>
</CustomField>