MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Is_Service_Charge_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Charge_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Service Charge Paid</label>
    <type>Checkbox</type>
</CustomField>