MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/KAR__c.field-meta.xml
<CustomField>
    <fullName>KAR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Handover_Details</relationshipName>
    <type>Lookup</type>
</CustomField>