MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Key_Acceptance_Completed__c.field-meta.xml
<CustomField>
    <fullName>Key_Acceptance_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Acceptance Completed</label>
    <type>Checkbox</type>
</CustomField>