MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Key_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Acceptance_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Acceptance Date</label>
    <type>Date</type>
</CustomField>