MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Key_Handover_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Key_Handover_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Handover Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Handover Details (Key Handover Appointment)</relationshipLabel>
    <relationshipName>Handover_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>