MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Key_Handover_Appointment_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Key_Handover_Appointment_Start_Time__c</fullName>
    <formula>Key_Handover_Appointment__r.SchedStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Handover Appointment Start Time</label>
    <type>DateTime</type>
</CustomField>