MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Key_Handover_Appointment_Statua__c.field-meta.xml
<CustomField>
    <fullName>Key_Handover_Appointment_Statua__c</fullName>
    <formula>TEXT(Key_Handover_Appointment__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Handover Appointment Statua</label>
    <type>Text</type>
</CustomField>