MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Last_Installment__c.field-meta.xml
<CustomField>
    <fullName>Last_Installment__c</fullName>
    <label>Last Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>