MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Last_Installment_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Installment_Payment_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Installment Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>