MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Last_Payment_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Receipt_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Payment Receipt Date</label>
    <type>Date</type>
</CustomField>