MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount__c</fullName>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>