MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Parking_Bay_No__c.field-meta.xml
<CustomField>
    <fullName>Parking_Bay_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parking Bay No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>