MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Project_Team_Approval_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Approval_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Team Approval Timestamp</label>
    <type>DateTime</type>
</CustomField>