MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Project_Team_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Approved_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Team Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>