MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/QA_agent__c.field-meta.xml
<CustomField>
    <fullName>QA_agent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA agent</label>
    <type>TextArea</type>
</CustomField>