MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/QA_Snag_Executive__c.field-meta.xml
<CustomField>
    <fullName>QA_Snag_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Snag Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Handover_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>