MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/QA_Snag_Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>QA_Snag_Executive_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Snag Executive Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>