MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/QA_Status__c.field-meta.xml
<CustomField>
    <fullName>QA_Status__c</fullName>
    <label>QA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>