MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Rebate_Line__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rebate Line</label>
    <length>200</length>
    <type>Text</type>
</CustomField>