MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Rectified_Customer_Snags__c.field-meta.xml
<CustomField>
    <fullName>Rectified_Customer_Snags__c</fullName>
    <label>Rectified Customer Snags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>