MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>