MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/RFO_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>RFO_Letter_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFO Letter Sent</label>
    <type>TextArea</type>
</CustomField>