MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/RFO_Sent__c.field-meta.xml
<CustomField>
    <fullName>RFO_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFO Sent</label>
    <type>Checkbox</type>
</CustomField>