MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/RFO_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>RFO_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFO Sent Date</label>
    <type>Date</type>
</CustomField>