MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Show_Around_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Show_Around_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Around Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Handover Details (Show Around Appointment)</relationshipLabel>
    <relationshipName>Handover_Details4</relationshipName>
    <type>Lookup</type>
</CustomField>