MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Show_Around_Appointment_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Show_Around_Appointment_Start_Time__c</fullName>
    <formula>Show_Around_Appointment__r.SchedStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Around Appointment Start Time</label>
    <type>DateTime</type>
</CustomField>