MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Show_Around_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Show_Around_Appointment_Status__c</fullName>
    <formula>TEXT(Show_Around_Appointment__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Around Appointment Status</label>
    <type>Text</type>
</CustomField>