MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Title_Deed_Completed__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Deed Completed</label>
    <type>Checkbox</type>
</CustomField>