MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Title_Deed_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Deed Completion Date</label>
    <type>Date</type>
</CustomField>