MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Title_Deed_Issuance_date__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Issuance_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Deed Issuance date</label>
    <type>Date</type>
</CustomField>