MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Unit_QA_Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_QA_Released_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit QA Released Date</label>
    <type>Date</type>
</CustomField>