MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Unit_Released_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Unit_Released_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Released Timestamp</label>
    <type>DateTime</type>
</CustomField>