MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone 1</fullName>
            </value>
            <value>
                <fullName>Zone 2</fullName>
            </value>
            <value>
                <fullName>Zone 3</fullName>
            </value>
            <value>
                <fullName>Zone 4</fullName>
            </value>
            <value>
                <fullName>Zone 5</fullName>
            </value>
            <value>
                <fullName>Zone 6</fullName>
            </value>
            <value>
                <fullName>Zone 7</fullName>
            </value>
            <value>
                <fullName>Zone 8</fullName>
            </value>
            <value>
                <fullName>Zone 9</fullName>
            </value>
            <value>
                <fullName>Zone 10</fullName>
            </value>
            <value>
                <fullName>Zone 11</fullName>
            </value>
            <value>
                <fullName>Zone 12</fullName>
            </value>
            <value>
                <fullName>Zone 13</fullName>
            </value>
            <value>
                <fullName>Zone 14</fullName>
            </value>
            <value>
                <fullName>Zone 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>