MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/listViews/Handover_Queue_Handover.listView-meta.xml
<ListView>
    <fullName>Handover_Queue_Handover</fullName>
    <filterScope>Queue</filterScope>
    <label>Handover Queue</label>
    <queue>Handover_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>